<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name_field_title"
            android:layout_margin="4dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editActivityTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description_field_title"
            android:layout_margin="4dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editActivityTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:inputType="textMultiLine"
                />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/task_date_field_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <com.nadolny.pedro.agilelife.utils.BetterDatePicker
            android:id="@+id/editActivityTaskDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/saveTaskButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/save_task_button_title"
            android:textSize="20sp"
            />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
