<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name_field_title"
            android:layout_margin="4dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/taskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description_field_title"
            android:layout_margin="4dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/taskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/task_date_field_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="4dp"/>

        <com.nadolny.pedro.agilelife.utils.BetterDatePicker
            android:id="@+id/taskDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/white"
            android:padding="4dp"/>

        <Button
            android:id="@+id/createTaskButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/create_task_button_title"
            android:textSize="20sp"
            android:layout_margin="4dp"
            />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

